syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

message UpdateCollectionRequest {
  string userId = 1;
  string collectionId = 2;
  string visibility = 3;
  string name = 4;
}

message UpdateCollectionResponse {
  string message = 1;
}
